--- a/notebooks/01 - Hello MongoDB.ipynb
+++ b/notebooks/01 - Hello MongoDB.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35684a7d-313e-495a-940a-317cebcc029d",
    "metadata": {},
    "outputs": [],
@@ -60,10 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60d2a0d6-255b-475c-971a-7cbf70d2edfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = MongoClient('localhost', 27017)\n",
     "client"
@@ -79,10 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d80c52c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['admin', 'config', 'local']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.list_database_names()"
    ]
@@ -115,10 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a198e0b0-c08a-4dae-8032-d517614fa228",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'local')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db = client['local']\n",
     "db"
@@ -134,10 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e86a3d9b-532c-43a6-8459-6859b4e54bc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['startup_log']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.list_collection_names()"
    ]
@@ -171,10 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1e4a39b0-9c58-42af-b428-74f5265cbc59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'local'), 'startup_log')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "collection = db['startup_log']\n",
     "collection"
@@ -182,10 +237,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6dd9f2b1-1dd1-43a9-b60a-6bdb5d3459ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 'fbbb6c71d47b-1650363001233',\n",
+      " 'buildinfo': {'allocator': 'tcmalloc',\n",
+      "               'bits': 64,\n",
+      "               'buildEnvironment': {'cc': '/opt/mongodbtoolchain/v3/bin/gcc: '\n",
+      "                                          'gcc (GCC) 8.5.0',\n",
+      "                                    'ccflags': '-Werror -include '\n",
+      "                                               'mongo/platform/basic.h '\n",
+      "                                               '-fasynchronous-unwind-tables '\n",
+      "                                               '-ggdb -Wall -Wsign-compare '\n",
+      "                                               '-Wno-unknown-pragmas '\n",
+      "                                               '-Winvalid-pch '\n",
+      "                                               '-fno-omit-frame-pointer '\n",
+      "                                               '-fno-strict-aliasing -O2 '\n",
+      "                                               '-march=sandybridge '\n",
+      "                                               '-mtune=generic '\n",
+      "                                               '-mprefer-vector-width=128 '\n",
+      "                                               '-Wno-unused-local-typedefs '\n",
+      "                                               '-Wno-unused-function '\n",
+      "                                               '-Wno-deprecated-declarations '\n",
+      "                                               '-Wno-unused-const-variable '\n",
+      "                                               '-Wno-unused-but-set-variable '\n",
+      "                                               '-Wno-missing-braces '\n",
+      "                                               '-fstack-protector-strong '\n",
+      "                                               '-Wa,--nocompress-debug-sections '\n",
+      "                                               '-fno-builtin-memcmp',\n",
+      "                                    'cppdefines': 'SAFEINT_USE_INTRINSICS 0 '\n",
+      "                                                  'PCRE_STATIC NDEBUG '\n",
+      "                                                  '_XOPEN_SOURCE 700 '\n",
+      "                                                  '_GNU_SOURCE _FORTIFY_SOURCE '\n",
+      "                                                  '2 BOOST_THREAD_VERSION 5 '\n",
+      "                                                  'BOOST_THREAD_USES_DATETIME '\n",
+      "                                                  'BOOST_SYSTEM_NO_DEPRECATED '\n",
+      "                                                  'BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS '\n",
+      "                                                  'BOOST_ENABLE_ASSERT_DEBUG_HANDLER '\n",
+      "                                                  'BOOST_LOG_NO_SHORTHAND_NAMES '\n",
+      "                                                  'BOOST_LOG_USE_NATIVE_SYSLOG '\n",
+      "                                                  'BOOST_LOG_WITHOUT_THREAD_ATTR '\n",
+      "                                                  'ABSL_FORCE_ALIGNED_ACCESS',\n",
+      "                                    'cxx': '/opt/mongodbtoolchain/v3/bin/g++: '\n",
+      "                                           'g++ (GCC) 8.5.0',\n",
+      "                                    'cxxflags': '-Woverloaded-virtual '\n",
+      "                                                '-Wno-maybe-uninitialized '\n",
+      "                                                '-fsized-deallocation '\n",
+      "                                                '-std=c++17',\n",
+      "                                    'distarch': 'x86_64',\n",
+      "                                    'distmod': 'ubuntu2004',\n",
+      "                                    'linkflags': '-Wl,--fatal-warnings '\n",
+      "                                                 '-pthread -Wl,-z,now '\n",
+      "                                                 '-fuse-ld=gold '\n",
+      "                                                 '-fstack-protector-strong '\n",
+      "                                                 '-Wl,--no-threads '\n",
+      "                                                 '-Wl,--build-id '\n",
+      "                                                 '-Wl,--hash-style=gnu '\n",
+      "                                                 '-Wl,-z,noexecstack '\n",
+      "                                                 '-Wl,--warn-execstack '\n",
+      "                                                 '-Wl,-z,relro '\n",
+      "                                                 '-Wl,--compress-debug-sections=none '\n",
+      "                                                 '-Wl,-z,origin '\n",
+      "                                                 '-Wl,--enable-new-dtags',\n",
+      "                                    'target_arch': 'x86_64',\n",
+      "                                    'target_os': 'linux'},\n",
+      "               'debug': False,\n",
+      "               'gitVersion': 'b977129dc70eed766cbee7e412d901ee213acbda',\n",
+      "               'javascriptEngine': 'mozjs',\n",
+      "               'maxBsonObjectSize': 16777216,\n",
+      "               'modules': [],\n",
+      "               'openssl': {'compiled': 'OpenSSL 1.1.1f  31 Mar 2020',\n",
+      "                           'running': 'OpenSSL 1.1.1f  31 Mar 2020'},\n",
+      "               'storageEngines': ['devnull', 'ephemeralForTest', 'wiredTiger'],\n",
+      "               'sysInfo': 'deprecated',\n",
+      "               'version': '5.0.7',\n",
+      "               'versionArray': [5, 0, 7, 0]},\n",
+      " 'cmdLine': {'net': {'bindIp': '*'}},\n",
+      " 'hostname': 'fbbb6c71d47b',\n",
+      " 'pid': 1,\n",
+      " 'startTime': datetime.datetime(2022, 4, 19, 10, 10, 1),\n",
+      " 'startTimeLocal': 'Tue Apr 19 10:10:01.233'}\n"
+     ]
+    }
+   ],
    "source": [
     "pp.pprint(collection.find_one())"
    ]
