--- a/notebooks/02 - Comandos básicos - Documento simples.ipynb
+++ b/notebooks/02 - Comandos básicos - Documento simples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b33cbc8f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8b2b8ad5",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "166ff965",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b7c5aefb",
    "metadata": {},
    "outputs": [],
@@ -127,10 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d3f6433",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cpf': '630.429.875-74',\n",
+      " 'email': 'maria clara.teixeira@hotmail.com',\n",
+      " 'idade': 28,\n",
+      " 'nome': 'Maria Clara Teixeira'}\n"
+     ]
+    }
+   ],
    "source": [
     "pessoa = criar_pessoa()\n",
     "pp.pprint(pessoa)"
@@ -138,10 +149,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3dc3dc9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cpf</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>630.429.875-74</td>\n",
+       "      <td>Maria Clara Teixeira</td>\n",
+       "      <td>28</td>\n",
+       "      <td>maria clara.teixeira@hotmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              cpf                  nome  idade  \\\n",
+       "0  630.429.875-74  Maria Clara Teixeira     28   \n",
+       "\n",
+       "                              email  \n",
+       "0  maria clara.teixeira@hotmail.com  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame.from_records([pessoa])"
    ]
@@ -156,10 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a243cee0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectId('625fee0298615463b5756e43')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# se a coleção não existir, ela é criada automagicamente :-)\n",
     "colecao_pessoa = db['pessoas']\n",
@@ -185,10 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "19b1e49d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('625fee0298615463b5756e43'),\n",
+      " 'cpf': '630.429.875-74',\n",
+      " 'email': 'maria clara.teixeira@hotmail.com',\n",
+      " 'idade': 28,\n",
+      " 'nome': 'Maria Clara Teixeira'}\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one({\"_id\":pessoa_id})\n",
     "pp.pprint(p)"
@@ -204,10 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9c54be5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'idade': {'$eq': 28}}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    'idade': {'$eq':pessoa['idade']}\n",
@@ -217,12 +311,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a27497b5",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('625fee0298615463b5756e43'),\n",
+      " 'cpf': '630.429.875-74',\n",
+      " 'email': 'maria clara.teixeira@hotmail.com',\n",
+      " 'idade': 28,\n",
+      " 'nome': 'Maria Clara Teixeira'}\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one(criterio)\n",
     "pp.pprint(p)"
@@ -238,10 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fa38f796",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': {'$eq': 'Maria Clara Teixeira'}}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    'nome': {'$eq':pessoa['nome']}\n",
@@ -251,12 +365,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c5fea27c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('625fee0298615463b5756e43'),\n",
+      " 'cpf': '630.429.875-74',\n",
+      " 'email': 'maria clara.teixeira@hotmail.com',\n",
+      " 'idade': 28,\n",
+      " 'nome': 'Maria Clara Teixeira'}\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one(criterio)\n",
     "pp.pprint(p)"
@@ -264,10 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6903ae44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': {'$eq': 'nome_estranho_que_não_será_criado'}}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    'nome': {'$eq':'nome_estranho_que_não_será_criado'}\n",
@@ -277,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "aba598ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, NoneType)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one(criterio)\n",
     "p, type(p)"
@@ -296,10 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "01e7d09d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'$set': {'idade': 50}}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    \"_id\":pessoa_id}\n",
@@ -312,10 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3dafa1de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7f890c6c4eb0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = colecao_pessoa.update_one(criterio, novo_valor)\n",
     "r"
@@ -323,10 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e1738f79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ref.: https://pymongo.readthedocs.io/en/stable/api/pymongo/results.html\n",
     "r.matched_count"
@@ -334,27 +509,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "344b840f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.modified_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "01f75b26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.raw_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "21c7b763",
    "metadata": {},
    "outputs": [],
@@ -364,10 +561,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7343bcef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('625fee0298615463b5756e43'),\n",
+      " 'cpf': '630.429.875-74',\n",
+      " 'email': 'maria clara.teixeira@hotmail.com',\n",
+      " 'idade': 50,\n",
+      " 'nome': 'Maria Clara Teixeira'}\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one({\"_id\":pessoa_id})\n",
     "pp.pprint(p)"
@@ -383,10 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f8fd7d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'$set': {'idade': 50}}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    \"_id\":'123'}\n",
@@ -399,10 +616,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9c7e769e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7f88ce0b2640>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = colecao_pessoa.update_one(criterio, novo_valor)\n",
     "r"
@@ -410,40 +638,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "307cc00e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.matched_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a9293ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.modified_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4d6f8fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 0, 'nModified': 0, 'ok': 1.0, 'updatedExisting': False}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.raw_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "20cef373",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7f88ce1ccd00>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = colecao_pessoa.update_one(criterio, novo_valor, upsert=True)\n",
     "r"
@@ -451,30 +723,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "97018e06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 1,\n",
+       " 'upserted': '123',\n",
+       " 'nModified': 0,\n",
+       " 'ok': 1.0,\n",
+       " 'updatedExisting': False}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.raw_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ba9c522f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.upserted_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3f22ae7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': '123', 'idade': 50}\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one({\"_id\":r.upserted_id})\n",
     "pp.pprint(p)"
@@ -490,10 +796,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fe4cae3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('625fee0298615463b5756e43')}\n"
+     ]
+    }
+   ],
    "source": [
     "criterio = {\n",
     "    \"_id\":pessoa_id}\n",
@@ -502,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c348ccd1",
    "metadata": {},
    "outputs": [],
@@ -512,24 +826,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8e4714f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 1, 'ok': 1.0}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r.raw_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "5bae9a5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "p = colecao_pessoa.find_one({\"_id\":pessoa_id})\n",
     "pp.pprint(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3220bd83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
