--- a/notebooks/06 - Modelagem - OneToOne.ipynb
+++ b/notebooks/06 - Modelagem - OneToOne.ipynb
@@ -220,16 +220,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Pessoa: None, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>,\n",
-      " <Pessoa: None, 032.658.491-98, Yuri, Endereço: Condomínio de Viana, 94>,\n",
-      " <Pessoa: None, 428.530.179-23, Nathan, Endereço: Ladeira Ana Luiza Melo, 60>,\n",
-      " <Pessoa: None, 583.492.760-29, Otávio, Endereço: Favela de da Costa, 4>,\n",
-      " <Pessoa: None, 703.269.148-03, Enzo, Endereço: Viaduto Martins, 72>,\n",
-      " <Pessoa: None, 341.286.059-05, Benjamin, Endereço: Fazenda de Souza, 47>,\n",
-      " <Pessoa: None, 730.469.815-20, Clarice, Endereço: Estrada da Cruz, 8>,\n",
-      " <Pessoa: None, 930.651.248-15, Davi Lucas, Endereço: Via de Costa, 38>,\n",
-      " <Pessoa: None, 451.793.086-66, Danilo, Endereço: Condomínio Mendes, 26>,\n",
-      " <Pessoa: None, 582.907.346-38, Vicente, Endereço: Trecho Gabriel Barros, 38>]\n"
+      "[<Pessoa: None, 273.450.619-06, Agatha, Endereço: Via de da Mata, 1>,\n",
+      " <Pessoa: None, 584.312.076-71, Nicole, Endereço: Vale de da Rosa, 99>,\n",
+      " <Pessoa: None, 372.981.405-23, Sabrina, Endereço: Rodovia de Teixeira, 68>,\n",
+      " <Pessoa: None, 840.637.921-96, Vinicius, Endereço: Alameda Davi Lucas Mendes, 81>,\n",
+      " <Pessoa: None, 849.657.103-39, Enzo Gabriel, Endereço: Colônia de Carvalho, 571>,\n",
+      " <Pessoa: None, 052.314.978-60, Mirella, Endereço: Estrada Carvalho, 79>,\n",
+      " <Pessoa: None, 821.539.640-24, Kevin, Endereço: Vereda João Pedro Moraes, 67>,\n",
+      " <Pessoa: None, 642.870.391-22, Augusto, Endereço: Quadra Eduardo Nascimento, 31>,\n",
+      " <Pessoa: None, 348.921.065-42, Raul, Endereço: Passarela de Correia, 88>,\n",
+      " <Pessoa: None, 947.538.026-47, Ana Julia, Endereço: Trecho de Lopes, 688>]\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "<Pessoa: 625f4c518aa345c91185abea, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>"
+       "<Pessoa: 625ff70862aa9bde784ed506, 273.450.619-06, Agatha, Endereço: Via de da Mata, 1>"
       ]
      },
      "execution_count": 9,
@@ -301,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f4c518aa345c91185abea')\n"
+      "ObjectId('625ff70862aa9bde784ed506')\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f4c518aa345c91185abe9')\n"
+      "ObjectId('625ff70862aa9bde784ed505')\n"
      ]
     }
    ],
@@ -366,16 +366,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f4c518aa345c91185abea')\n",
-      "ObjectId('625f4c528aa345c91185abec')\n",
-      "ObjectId('625f4c528aa345c91185abee')\n",
-      "ObjectId('625f4c528aa345c91185abf0')\n",
-      "ObjectId('625f4c528aa345c91185abf2')\n",
-      "ObjectId('625f4c528aa345c91185abf4')\n",
-      "ObjectId('625f4c528aa345c91185abf6')\n",
-      "ObjectId('625f4c528aa345c91185abf8')\n",
-      "ObjectId('625f4c528aa345c91185abfa')\n",
-      "ObjectId('625f4c528aa345c91185abfc')\n"
+      "ObjectId('625ff70862aa9bde784ed506')\n",
+      "ObjectId('625ff70862aa9bde784ed508')\n",
+      "ObjectId('625ff70862aa9bde784ed50a')\n",
+      "ObjectId('625ff70862aa9bde784ed50c')\n",
+      "ObjectId('625ff70862aa9bde784ed50e')\n",
+      "ObjectId('625ff70862aa9bde784ed510')\n",
+      "ObjectId('625ff70862aa9bde784ed512')\n",
+      "ObjectId('625ff70862aa9bde784ed514')\n",
+      "ObjectId('625ff70862aa9bde784ed516')\n",
+      "ObjectId('625ff70862aa9bde784ed518')\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "ead155d5",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pessoa: 625f4c518aa345c91185abea, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>\n"
+      "<Pessoa: 625ff70862aa9bde784ed506, 273.450.619-06, Agatha, Endereço: Via de da Mata, 1>\n"
      ]
     }
    ],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "0eb9c593",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f4c518aa345c91185abe9')\n"
+      "ObjectId('625ff70862aa9bde784ed505')\n"
      ]
     }
    ],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "99ba5229",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mOperationError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m endereco \u001b[38;5;241m=\u001b[39m Endereco\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m625f4c518aa345c91185abe9\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mendereco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m endereco \u001b[38;5;241m=\u001b[39m Endereco\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m625ff70862aa9bde784ed505\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mendereco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/document.py:653\u001b[0m, in \u001b[0;36mDocument.delete\u001b[0;34m(self, signal_kwargs, **write_concern)\u001b[0m\n\u001b[1;32m    650\u001b[0m         \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\u001b[38;5;241m.\u001b[39mdelete()\n\u001b[1;32m    652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 653\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfilter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_object_key\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    654\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwrite_concern\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwrite_concern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_from_doc_delete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m    655\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m pymongo\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mOperationFailure \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    657\u001b[0m     message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m err\u001b[38;5;241m.\u001b[39margs\n",
       "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/queryset/base.py:483\u001b[0m, in \u001b[0;36mBaseQuerySet.delete\u001b[0;34m(self, write_concern, _from_doc_delete, cascade_refs)\u001b[0m\n\u001b[1;32m    481\u001b[0m         refs \u001b[38;5;241m=\u001b[39m document_cls\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{field_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__in\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m})\n\u001b[1;32m    482\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m refs\u001b[38;5;241m.\u001b[39mlimit(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcount() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 483\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m OperationError(\n\u001b[1;32m    484\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m refers to it)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    485\u001b[0m                 \u001b[38;5;241m%\u001b[39m (document_cls\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, field_name)\n\u001b[1;32m    486\u001b[0m             )\n\u001b[1;32m    488\u001b[0m \u001b[38;5;66;03m# Check all the other rules\u001b[39;00m\n\u001b[1;32m    489\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m rule_entry, rule \u001b[38;5;129;01min\u001b[39;00m delete_rules:\n",
       "\u001b[0;31mOperationError\u001b[0m: Could not delete document (Pessoa.endereco refers to it)"
@@ -442,18 +442,29 @@
     }
    ],
    "source": [
-    "endereco = Endereco.objects(id='625f4c518aa345c91185abe9').first()\n",
+    "endereco = Endereco.objects(id='625ff70862aa9bde784ed505').first()\n",
     "endereco.delete()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "87cee784",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Pessoa: 625ff70862aa9bde784ed506, 273.450.619-06, Agatha, Endereço: Via de da Mata, 1>]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Pessoa.objects(id='625f48b63a1f265e4af5816b')"
+    "Pessoa.objects(id='625ff70862aa9bde784ed506')"
    ]
   }
  ],
