--- a/notebooks/08 - Modelagem - OneToMany.ipynb
+++ b/notebooks/08 - Modelagem - OneToMany.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0b71aa64",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ea741f12",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "cedde46c",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "332b9e9b",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "fc8b60e3",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "5450a862",
    "metadata": {},
    "outputs": [
@@ -224,16 +224,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Pessoa: None, 483.967.520-10, Olivia, Endereço: [<Endereco: Morro Nascimento, 821>, <Endereco: Pátio de Duarte, 180>]>,\n",
-      " <Pessoa: None, 670.381.295-03, Davi, Endereço: [<Endereco: Trevo Sarah Ramos, 83>, <Endereco: Setor de Santos, 6>]>,\n",
-      " <Pessoa: None, 870.139.625-03, Valentina, Endereço: [<Endereco: Residencial Giovanna Lopes, 43>]>,\n",
-      " <Pessoa: None, 045.381.627-44, Julia, Endereço: [<Endereco: Sítio Sofia Ferreira, 69>]>,\n",
-      " <Pessoa: None, 027.349.861-40, Luiza, Endereço: [<Endereco: Ladeira Maria Sophia Araújo, 59>, <Endereco: Favela Souza, 90>]>,\n",
-      " <Pessoa: None, 863.195.270-21, Melissa, Endereço: [<Endereco: Estação da Mata, 98>, <Endereco: Sítio Castro, 6>, <Endereco: Morro de Campos, 66>]>,\n",
-      " <Pessoa: None, 281.530.974-23, Júlia, Endereço: [<Endereco: Vale de Correia, 74>, <Endereco: Favela de Porto, 8>, <Endereco: Vila Benício Aragão, 57>]>,\n",
-      " <Pessoa: None, 045.213.789-60, Sofia, Endereço: [<Endereco: Residencial Eduardo Santos, 612>, <Endereco: Lago da Cunha, 80>]>,\n",
-      " <Pessoa: None, 924.380.517-79, Diego, Endereço: [<Endereco: Rua Breno Ribeiro, 5>, <Endereco: Parque Duarte, 87>, <Endereco: Residencial Levi Nunes, 80>]>,\n",
-      " <Pessoa: None, 289.463.071-96, Lavínia, Endereço: [<Endereco: Recanto da Costa, 76>, <Endereco: Núcleo de Oliveira, 2>]>]\n"
+      "[<Pessoa: None, 618.259.073-40, Lara, Endereço: [<Endereco: None, Sítio Emanuelly Gonçalves, 6>, <Endereco: None, Recanto de Teixeira, 729>]>,\n",
+      " <Pessoa: None, 271.864.039-13, Isabella, Endereço: [<Endereco: None, Chácara de Costela, 93>, <Endereco: None, Fazenda Fernando Rocha, 551>, <Endereco: None, Recanto de da Rocha, 28>]>,\n",
+      " <Pessoa: None, 792.158.634-19, Bruna, Endereço: [<Endereco: None, Jardim Moura, 2>]>,\n",
+      " <Pessoa: None, 912.750.436-07, Kamilly, Endereço: [<Endereco: None, Praia de Jesus, 714>]>,\n",
+      " <Pessoa: None, 740.352.619-80, Brenda, Endereço: [<Endereco: None, Conjunto Stephany Ferreira, 8>, <Endereco: None, Avenida de Cardoso, 54>]>,\n",
+      " <Pessoa: None, 784.953.602-92, Maysa, Endereço: [<Endereco: None, Fazenda de Correia, 55>, <Endereco: None, Condomínio Bruno Pinto, 712>, <Endereco: None, Via Fernanda Rodrigues, 39>]>,\n",
+      " <Pessoa: None, 970.485.316-57, Milena, Endereço: [<Endereco: None, Área Renan Nunes, 74>]>,\n",
+      " <Pessoa: None, 780.921.563-95, Luiz Felipe, Endereço: [<Endereco: None, Rua de Ferreira, 35>]>,\n",
+      " <Pessoa: None, 396.058.714-75, Clara, Endereço: [<Endereco: None, Sítio de Mendes, 47>, <Endereco: None, Pátio Costa, 36>]>,\n",
+      " <Pessoa: None, 983.521.064-06, Julia, Endereço: [<Endereco: None, Distrito de Nascimento, 62>, <Endereco: None, Viaduto Catarina Rodrigues, 56>]>]\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "7036ac60-5979-4445-a5fd-54bf39925482",
    "metadata": {},
    "outputs": [
@@ -274,17 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "2c048809",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Pessoa: 625f5015cc40c07d0d148255, 483.967.520-10, Olivia, Endereço: [<Endereco: Morro Nascimento, 821>, <Endereco: Pátio de Duarte, 180>]>"
+       "<Pessoa: 625ff9298ed61a282c640b7f, 618.259.073-40, Lara, Endereço: [<Endereco: 625ff9298ed61a282c640b7d, Sítio Emanuelly Gonçalves, 6>, <Endereco: 625ff9298ed61a282c640b7e, Recanto de Teixeira, 729>]>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "b2cce9fd",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f5015cc40c07d0d148255')\n"
+      "ObjectId('625ff9298ed61a282c640b7f')\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "926c6d54",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Endereco: Morro Nascimento, 821>, <Endereco: Pátio de Duarte, 180>]\n"
+      "[<Endereco: 625ff9298ed61a282c640b7d, Sítio Emanuelly Gonçalves, 6>,\n",
+      " <Endereco: 625ff9298ed61a282c640b7e, Recanto de Teixeira, 729>]\n"
      ]
     }
    ],
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "8e269e5c-3aae-4180-84c6-f0d89d8a8dd7",
    "metadata": {},
    "outputs": [],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "36d993f5",
    "metadata": {},
    "outputs": [
@@ -372,16 +373,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f5015cc40c07d0d148255')\n",
-      "ObjectId('625f5050cc40c07d0d148258')\n",
-      "ObjectId('625f5050cc40c07d0d14825a')\n",
-      "ObjectId('625f5050cc40c07d0d14825c')\n",
-      "ObjectId('625f5050cc40c07d0d14825f')\n",
-      "ObjectId('625f5050cc40c07d0d148263')\n",
-      "ObjectId('625f5050cc40c07d0d148267')\n",
-      "ObjectId('625f5050cc40c07d0d14826a')\n",
-      "ObjectId('625f5050cc40c07d0d14826e')\n",
-      "ObjectId('625f5050cc40c07d0d148271')\n"
+      "ObjectId('625ff9298ed61a282c640b7f')\n",
+      "ObjectId('625ff9298ed61a282c640b83')\n",
+      "ObjectId('625ff9298ed61a282c640b85')\n",
+      "ObjectId('625ff9298ed61a282c640b87')\n",
+      "ObjectId('625ff9298ed61a282c640b8a')\n",
+      "ObjectId('625ff9298ed61a282c640b8e')\n",
+      "ObjectId('625ff9298ed61a282c640b90')\n",
+      "ObjectId('625ff9298ed61a282c640b92')\n",
+      "ObjectId('625ff9298ed61a282c640b95')\n",
+      "ObjectId('625ff9298ed61a282c640b98')\n"
      ]
     }
    ],
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "ead155d5",
    "metadata": {},
    "outputs": [
@@ -400,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pessoa: 625f5015cc40c07d0d148255, 483.967.520-10, Olivia, Endereço: [<Endereco: Morro Nascimento, 821>, <Endereco: Pátio de Duarte, 180>]>\n"
+      "<Pessoa: 625ff9298ed61a282c640b7f, 618.259.073-40, Lara, Endereço: [<Endereco: 625ff9298ed61a282c640b7d, Sítio Emanuelly Gonçalves, 6>, <Endereco: 625ff9298ed61a282c640b7e, Recanto de Teixeira, 729>]>\n"
      ]
     }
    ],
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "0eb9c593",
    "metadata": {},
    "outputs": [
@@ -419,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f5015cc40c07d0d148253')\n"
+      "ObjectId('625ff9298ed61a282c640b7d')\n"
      ]
     }
    ],
@@ -429,21 +430,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "99ba5229",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationError",
-     "evalue": "Could not delete document (Pessoa.enderecos refers to it)",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'delete'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m endereco \u001b[38;5;241m=\u001b[39m Endereco\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m625f5015cc40c07d0d148253\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mendereco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/document.py:653\u001b[0m, in \u001b[0;36mDocument.delete\u001b[0;34m(self, signal_kwargs, **write_concern)\u001b[0m\n\u001b[1;32m    650\u001b[0m         \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\u001b[38;5;241m.\u001b[39mdelete()\n\u001b[1;32m    652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 653\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfilter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_object_key\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    654\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwrite_concern\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwrite_concern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_from_doc_delete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m    655\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m pymongo\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mOperationFailure \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    657\u001b[0m     message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m err\u001b[38;5;241m.\u001b[39margs\n",
-      "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/queryset/base.py:483\u001b[0m, in \u001b[0;36mBaseQuerySet.delete\u001b[0;34m(self, write_concern, _from_doc_delete, cascade_refs)\u001b[0m\n\u001b[1;32m    481\u001b[0m         refs \u001b[38;5;241m=\u001b[39m document_cls\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{field_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__in\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m})\n\u001b[1;32m    482\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m refs\u001b[38;5;241m.\u001b[39mlimit(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcount() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 483\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m OperationError(\n\u001b[1;32m    484\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m refers to it)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    485\u001b[0m                 \u001b[38;5;241m%\u001b[39m (document_cls\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, field_name)\n\u001b[1;32m    486\u001b[0m             )\n\u001b[1;32m    488\u001b[0m \u001b[38;5;66;03m# Check all the other rules\u001b[39;00m\n\u001b[1;32m    489\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m rule_entry, rule \u001b[38;5;129;01min\u001b[39;00m delete_rules:\n",
-      "\u001b[0;31mOperationError\u001b[0m: Could not delete document (Pessoa.enderecos refers to it)"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m endereco \u001b[38;5;241m=\u001b[39m Endereco\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m625f5015cc40c07d0d148253\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mendereco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'delete'"
      ]
     }
    ],
